# appia-dev

./: .env.bak  .gitignore  .pre-commit-config.yaml  .yamllint.yml  AGENTS.md  APPIA_WORKFLOWS_FIX_GUIDE.md  CORRECTIONS.md  DASHBOARD_CLOUD.md  DASHBOARD_CLOUD_PLAN.md  DASHBOARD_IMPLEMENTATION_STATUS.md  DEPLOYMENT_FIX_SUMMARY.md  DEPLOY_ECOSYSTEM_COMPLETE.md  DEPLOY_GUIDE.md  DEPLOY_QUICK_START.md  Dockerfile  Dockerfile.gcp  EARLY_LAUNCH_README.md  ENHANCED_ORCHESTRATOR_SUMMARY.md  FINAL_CONFIG_SUMMARY.md  FINAL_IMPLEMENTATION_STATUS.md  FINAL_STABILIZATION_SUCCESS.md  GITHUB_ACTIONS_FIX_COMPLETE.md  GITHUB_WORKFLOWS_FIX_REPORT.md  GROK_ORCHESTRATOR_BUG_FIXES.md  GROK_ORCHESTRATOR_IMPROVEMENTS.md  GROK_V2_STATUS.md  HISTORIQUE_CORRECTIONS.md  JARVYS_AI_DOCUMENTATION.md  JARVYS_AI_FINAL_STATUS.md  JARVYS_ARCHITECTURE_DUAL_REPO.md  JARVYS_DASHBOARD_DELIVERY.md  JARVYS_DEPLOYMENT_SUMMARY.json  JARVYS_FINAL_DOCUMENTATION.md  LICENSE  MERGE_COMPLETION_REPORT.md  ORCHESTRATEUR_AUTONOME_GCP.md  ORCHESTRATEUR_GROK_STATUS_FINAL.md  PRECOMMIT_ERRORS_RESOLVED.md  QUANTUM_ROUTING_CONCEPT.md  RAPPORT_COMMIT_MASSIF.md  (+138 more)
.devcontainer/: devcontainer.json  postStartCommand.sh  setup.sh  setup.sh.backup  setup_optimized.sh
.github/workflows/: agent.yml  ci.yml  deploy-dashboard.yml  deploy-supabase.yml  early-launch-issues.yml  jarvys-cloud.yml  model-detection.yml  network-validation.yml  test-simple.yml  transfer-secrets.yml  wiki-init.yml  wiki-sync.yml  wiki.yml
app/: __init__.py  main.py
appIA_complete_package/: .env.template  README.md  deploy_to_appIA.sh  requirements.txt
appIA_complete_package/config/: jarvys_ai_config.json
dashboard/: main.py
dashboard-cloud/: next.config.js  package.json  tailwind.config.js
dashboard-cloud/app/: globals.css  layout.tsx  page.tsx
dashboard/templates/: dashboard.html
dashboard_local/: dashboard_local.py  requirements.txt
deployment_packages/jarvys_ai_complete_20250711_093331/: deploy_windows.bat  jarvys_config.json  requirements-jarvys-ai.txt  test_jarvys_ai_complete.py
deployment_packages/jarvys_ai_complete_20250711_093345/: README.md  deploy_cloud.sh  deploy_linux.sh  jarvys_config.json  test_jarvys_ai_complete.py
docker/: start-gcp.sh
docs/: AI_PACKAGES_AUTO_UPDATE.md  JARVYS_AI_SPEC.md  index.md
docs/modules/: jarvys_dev.md
jarvys-dashboard-gcp/: .env.example  .env.production  ARCHITECTURE.md  Dockerfile  README.md  cloudbuild.yaml  deploy-gcp.sh  index.html  package.json  tailwind.config.js  vite.config.ts
jarvys-orchestrator-gcp/: Dockerfile  README.md  cloudbuild.yaml  deploy-gcp.sh  github_sync_manager.py  grok_orchestrator_gcp.py  requirements.txt
jarvys_ai/: continuous_improvement.py  dashboard_integration.py  digital_twin.py  enhanced_fallback_engine.py  fallback_engine.py  intelligence_core.py  main.py
memory_storage/: cycle_start_1752740394.json  cycle_start_1752741335.json  init_memory.json  lint_operation_1752741498.json  lint_operation_1752741542.json  task_identification_1752741511.json  technology_updates_1752741334.json  technology_updates_1752741456.json
reports/: introspection_report.json
scripts/: clean_all_conflicts.py  enhance_autonomy.py  execute_ask_tasks.py  explore_supabase_dashboard.py  fix_pyproject.py  fix_pyproject_psutil.py  fix_pyproject_ruff.py  fix_pyproject_syntax.py  fix_syntax_errors.py  generate_wiki_docs.py  introspection.py  issue_processor.py  rebuild_pyproject_deps.py  resolve_all_conflicts.py  resolve_conflicts.py  update_ai_packages.sh  verify_linting.py
supabase/: config.toml  functions.sql  schema.sql
tests/: test_agent_communication.py  test_api_integration.py  test_automation.py  test_connectivity.py  test_deployment.py  test_docker.py  test_docs.py  test_early_launch.py  test_environment.py  test_infrastructure.py  test_jarvys_ai.py  test_jarvys_dev.py  test_langgraph_loop.py  test_main.py  test_memory.py  test_model_watcher.py  test_multi_model_router.py  test_performance.py  test_security.py  test_workflows.py
tools/: debug_dashboard.py  error_tracker.py  health_check.py  log_analyzer.py  monitoring_setup.py
wiki/: API-Reference.md  Autonomy-Report.md  Home.md
(+142 files in other folders)
