[tool.poetry]
name = "jarvys-dev"
version = "0.1.0"
description = "Autonomous Dev agent"
authors = ["Yann Abadie <yannabadie@example.com>"]
packages = [{ include = "jarvys_dev", from = "src" }]

[tool.poetry.dependencies]
python       = "^3.12"
PyGithub     = "^2.6"
requests = "^2.32"
openai       = "^1.25"
supabase = "^2.4"
pgvector = { version = "^0.2.4", optional = true }
langgraph = "^0.0.26"
beautifulsoup4 = "^4.12"
pymupdf = "^1.22"


[tool.poetry.group.dev.dependencies]
pytest       = "^8.4"
pytest-mock  = "^3.14"
pre-commit   = "^3.7"
mkdocs-material = "^9.6"
mkdocstrings = {version = "^0.29", extras = ["python"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"