[project]
name = "jarvys-dev"
version = "0.1.0"
description = "Autonomous Dev agent"
authors = [{name = "Yann Abadie", email = "yannabadie@example.com"}]
requires-python = ">=3.12,<4.0"
dependencies = [
    "PyGithub>=2.6",
    "requests>=2.32",
    "openai>=1.25",
    "anthropic>=0.57.1",
    "google-generativeai>=0.8.5",
    "supabase>=2.4",
    "langgraph>=0.0.26",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.3",
    "websockets>=12.0",
    "aiofiles>=24.1.0"
]

[project.optional-dependencies]
vector = ["pgvector>=0.2.4"]
dev = [
    "pytest>=8.4",
    "pytest-mock>=3.14",
    "pre-commit>=3.7",
    "mkdocs-material>=9.6",
    "mkdocstrings[python]>=0.29",
    "psutil>=5.9.0"
]

[tool.poetry]
packages = [{ include = "jarvys_dev", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
PyGithub = "^2.6"
requests = "^2.32"
openai = "^1.25"
anthropic = "^0.57.1"
google-generativeai = "^0.8.5"
supabase = "^2.4"
pgvector = { version = "^0.2.4", optional = true }
langgraph = "^0.0.26"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
jinja2 = "^3.1.3"
websockets = "^12.0"
aiofiles = "^24.1.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4"
pytest-mock = ">=3.14"
pre-commit = ">=3.7"
mkdocs-material = ">=9.6"
mkdocstrings = {version = ">=0.29", extras = ["python"]}
psutil = ">=5.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"